--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # intermediate build files
 *.bgn
 *.bit
+*.bin
 *.bld
 *.cmd_log
 *.drc
@@ -65,3 +66,7 @@ xlnx_auto_0_xdb/
 xst/
 _ngo/
 _xmsgs/
+
+# code stuff
+*.elf
+*.o
