add submodule for mojo-base-project

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "kicad/M68K-BREAKOUT"]
 	path = kicad/M68K-BREAKOUT
 	url = ../M68K-BREAKOUT.git
+[submodule "hdl/mojo/ise/mojo-base-project"]
+	path = hdl/mojo/ise/mojo-base-project
+	url = https://github.com/embmicro/mojo-base-project
